--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: "α" # 这是版本号，可以留空。
 logo: logo-120x120.png # 120x120 px 的 logo 文件
 teaser: # 400x250 px default teaser image used in image archive grid
 locale: zh-cn # 默认设置成中文了，如果都是英文内容可以改为英文。
-url: http://emptymalei.github.io/planets-jekyll # 你的网站的 url 
+url: https://loji44.github.io   # 你的网站的 url 
 baseurl:  # baseurl 设置请参阅 jekyll 的文档
 
 # Jekyll configuration
