--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-public
-.gitmodules
-/_site
-/dist
-/dist.tar.gz
-/Gemfile.lock
-/.jekyll-cache
+_site
+.sass-cache
+.jekyll-cache
+.jekyll-metadata
+vendor
+Gemfile.lock
