--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
 title: Blog · Loji44
 url: "https://loji44.github.io"
 baseurl: ""
+
+# 全局顶部导航栏配置。格式："名称=跳转链接"，例如 "About=/about.html"
+nav:
+  - About=/about.html
+  - TAGS=/tags.html
+  - RSS=/feed.xml
+  - 🔍SEARCH=/search.html
