使用jekyll-archives插件自动生成tag下面的文章列表(结合自己的layout: tag_post_list.html)

--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,13 @@ nav:
   - TAGS=/tags.html
   - RSS=/feed.xml
   - 🔍SEARCH=/search.html
+
+# 不要动这个配置：根据tag生成页面
+plugins:
+  - jekyll-archives
+# 不要动这个配置：根据tag生成页面
+jekyll-archives:
+  enabled: ['tags']
+  layout: tag_post_list
+  permalinks:
+    tag: '/tags/:name.html'
